# cafard

./: .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker_release.yml  performance_tests.yml  performance_tests_k6.yml  performance_tests_wrk.yml  unit_tests.yml
.github/workspace/: load_tests.js
cli/: Cargo.toml
cli/src/: cliargs.rs  main.rs
cli/tests/integration_tests/: cli.rs
cli/tests/unit_tests/: cli.rs
sdk/: Cargo.toml
sdk/src/: cache.rs  database.rs  error.rs  geospatial.rs  lib.rs  lock.rs  validatable.rs
sdk/src/caches/: error.rs
sdk/src/databases/: collection.rs  collection_schema.rs  database.rs  document.rs  error.rs  field.rs  index.rs  mod.rs
sdk/src/databases/request_models/: index.rs  mod.rs
sdk/src/geospatials/: error.rs  geospatial.rs  mod.rs
sdk/src/locks/: error.rs  lock.rs  mod.rs
server/: Cargo.toml  server.http
server/src/: background_job.rs  cache.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs
server/src/handlers/: cache_handlers.rs  database_handlers.rs  geospatial_handlers.rs  healthcheck_handlers.rs  lock_handlers.rs  mod.rs
server/src/models/: mod.rs  request_models.rs  response_models.rs
server/tests/: api.rs
src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
