[package]
name = "cafard"
version = "0.1.0"
edition = "2021"
description = "Cafard SDK"
license = "MIT"
keywords = ["cafard", "cache"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
geo = "0.28.0"
geojson = "0.24.1"
thiserror = "1.0.59"
strum = "0.26.2"
serde = { version = "1.0.197", features = ["derive"] }
