[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-validator = "5.0.1"
actix-settings = "0.7.1"
validator = { version = "0.18.0", features = ["derive"] }
background-jobs-actix = "0.18.0"
background-jobs-core = "0.18.0"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"]}
cafard = { path = "../sdk" }

[dev-dependencies]
actix-rt = "2.9.0"

[[bin]]
name = "cafard-server"
path = "src/main.rs"